--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   "keywords": [
     "tags",
     "tarea",
-    "programacion"
+    "programacion",
+    "glosario"
   ],
   "author": "Joseph Salen <jsalen.91@gmail.com>",
   "license": "MIT"
